# libmarshal

./: API.wiki  CMakeLists.txt  Home.wiki  Python API.wiki  README.md
cmake/: FindOpenCL.cmake
gtest/: CMakeLists.txt
include/: cl_marshal.h  cl_profile.h  marshal.h  plan.hpp  singleton.hpp
src/: CMakeLists.txt  cl_marshal.cc  marshal.cu  marshal_kernel.cu
src/cl/: cl_aos_asta.cl
src/py/: basic.py  transpose.py  transpose_unittest.py
test/: CMakeLists.txt  cl_unittest.cc  clock.cu  unittest.cu
tools/: CMakeLists.txt  main.cpp
tools/segments/: header_guts.hpp  header_header.hpp  source_class_definitions.hpp  source_header.hpp  source_post_index.hpp  source_pre_data.hpp  source_pre_index.hpp
