CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT (libmarshal)
SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
FIND_PACKAGE(CUDA)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

SET (CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
FIND_PACKAGE(OpenCL)
IF(APPLE)
  INCLUDE_DIRECTORIES(
    ${OPENCL_INCLUDE_DIRS}/Headers
    /opt/local/include
  )
ELSE(APPLE)
FIND_PACKAGE(OpenGL)
  INCLUDE_DIRECTORIES(
    ${OPENCL_INCLUDE_DIRS}/CL
    ${OPENCL_INCLUDE_DIRS}/
    ${OPENGL_INCLUDE_DIR}
  )
ENDIF(APPLE)

MESSAGE(${CMAKE_PROJECT_NAME} " include directories: \n")
get_directory_property(includes INCLUDE_DIRECTORIES)
message("${includes}\n")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fexceptions")
ADD_SUBDIRECTORY(gtest)
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(tools)
ADD_SUBDIRECTORY(test)
ENABLE_TESTING()
